--- a/less/widgets.less
+++ b/less/widgets.less
@@ -325,7 +325,7 @@
 
 .responsiveslideshow .caption {
     background-color: fade(@color-swatch4, 65%);
-    bottom: initial;
+    bottom: inherit;
     position: absolute;
     margin: 0;
     padding: 10px 25px;
